[workspace]
resolver = "2"

# 指定工作空间成员（子crate）
members = [
    "proc-tools",
    "proc-tools-core",
    "proc-tools-helper",
]

[profile.release]
opt-level = 3           # 指定编译器优化的级别，最高为3
lto = "fat"             # 启用最大程度的链接时优化
codegen-units = 1       # 降低代码生成单元数，增加优化时间，提升性能
panic = "abort"         # 使用 "abort" 减少编译文件的大小，不保留展开栈的信息
strip = "symbols"       # 移除符号信息，保留必要的调试信息
overflow-checks = false # 禁用溢出检查，以提高性能
debug = false           # 关闭调试信息